force-app/main/default/objects/smagicinteract__LV_MMS_Detail__c/smagicinteract__LV_MMS_Detail__c.object-meta.xml
<CustomObject>
    <label>LV MMS Detail</label>
    <nameField>
        <label>LV MMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV MMS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>