force-app/main/default/objects/smagicinteract__LV_MMS_Detail__c/fields/smagicinteract__List_View_Configuration__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__List_View_Configuration__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>List View Configuration</label>
    <referenceTo>smagicinteract__List_View_Configuration__c</referenceTo>
    <relationshipLabel>LV MMS Details</relationshipLabel>
    <relationshipName>LV_MMS_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>