force-app/main/default/objects/smagicinteract__LV_MMS_Detail__c/fields/smagicinteract__MMS_Url__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_Url__c</fullName>
    <description>Deprecated. Do not use.</description>
    <label>MMS Url</label>
    <type>Url</type>
</CustomField>